platform/policies/gatekeeper/image-security.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagesignature
  annotations:
    description: "Requires container images to be signed and from allowed registries"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImageSignature
      validation:
        type: object
        properties:
          allowedRegistries:
            type: array
            items:
              type: string
          requireSignature:
            type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredimagesignature

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          not starts_with_allowed_registry(image)
          msg := sprintf("Container %v uses disallowed registry: %v", [container.name, image])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          ends_with(image, ":latest")
          msg := sprintf("Container %v uses latest tag which is not allowed: %v", [container.name, image])
        }

        starts_with_allowed_registry(image) {
          allowed := input.parameters.allowedRegistries[_]
          startswith(image, allowed)
        }
---
apiVersion: config.gatekeeper.sh/v1alpha1
kind: K8sRequiredImageSignature
metadata:
  name: must-use-signed-images
spec:
  match:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    allowedRegistries:
      - "123456789012.dkr.ecr.us-west-2.amazonaws.com/"
      - "ghcr.io/rustem003/"
    requireSignature: true
